--- a/WebContent/styles/default.css
+++ b/WebContent/styles/default.css
@@ -37,8 +37,8 @@ body {
 /*item*/
 
 .item-title {
-	margin-left: 5%;
-    margin-right: 5%;
+	margin-left: 50px;
+ 	 margin-right: 50px;
     padding:  20px 300px;
     margin-bottom: 20px;
     background-color: rgb(255, 255, 255);
@@ -111,4 +111,33 @@ thead,tfoot {
 .centrer {
 	text-align: center;
 	padding-left: 10%;
+}
+
+
+.error{
+  background-color: #f0380a;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 5px;
+  height: 25px;
+  margin-bottom: 0px;
+  border-radius: 40px;
+  text-align: center;
+  display: block;
+  text-decoration: none;
+  color: black;
+}
+
+.success{
+  background-color: #0af057;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 5px;
+  height: 25px;
+  margin-bottom: 0px;
+  border-radius: 40px;
+  text-align: center;
+  display: block;
+  text-decoration: none;
+  color: black;
 }
